--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,11 @@ body {
     rgba(23, 34, 59, 1) 10%,
     rgba(34, 64, 116, 1) 100%
   ); */
-  background: linear-gradient(
-    to bottom,
-    rgba(2, 0, 36, 1) 0%,
-    rgba(23, 34, 59, 1) 10%,
-    rgba(34, 64, 116, 1) 100%
+  background-image: linear-gradient(
+    to top,
+    #1e3c72 0%,
+    #1e3c72 1%,
+    #2a5298 100%
   );
   overflow: auto;
   margin: 0;
